feat: upgrade to webpack v4

--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^7.0.0-beta.1",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.9.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
@@ -44,8 +45,8 @@
     "better-npm-run": "^0.0.14",
     "clean-webpack-plugin": "^0.1.9",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
-    "d3": "^4.11.0",
+    "css-loader": "^0.28.11",
+    "d3": "^5.0.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-import": "^2.2.0",
@@ -82,16 +83,16 @@
     "redux-thunk": "^2.1.0",
     "style-loader": "^0.16.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
+    "stylus-loader": "^3.0.2",
     "svg-react-loader": "^0.3.3",
     "url-loader": "^0.5.6",
-    "webpack": "3.0.0",
+    "webpack": "^4.5.0",
     "webpack-bundle-analyzer": "^2.7.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "2.1.0-beta.9",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-manifest-plugin": "^1.0.1",
-    "webpack-vendor-chunk-plugin": "^1.0.0"
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-middleware": "^3.1.2",
+    "webpack-dev-server": "^3.1.3",
+    "webpack-hot-middleware": "^2.22.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "config": {
     "ghooks": {
