--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-standard": "^3.0.0",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "ghooks": "^2.0.0",
@@ -93,10 +94,5 @@
     "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.22.0",
     "webpack-node-externals": "^1.7.2"
-  },
-  "config": {
-    "ghooks": {
-      "pre-commit": "eslint ./src --quiet"
-    }
   }
 }
